# nia

./: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/gpui_tokio/: Cargo.toml
crates/gpui_tokio/src/: lib.rs
crates/navidrome/: Cargo.toml
crates/navidrome/src/: auth.rs  browsing.rs  lib.rs  lists.rs  models.rs  stream.rs
crates/navidrome/src/models/: agent.rs  album.rs  artist.rs  auth.rs  mod.rs  now_playing.rs  song.rs
crates/nia/: Cargo.toml
crates/nia/src/: main.rs
crates/nia/src/screens/: album_screen.rs  login_screen.rs  main_screen.rs  mod.rs
crates/reqwest_client/: Cargo.toml
crates/reqwest_client/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/components/: text_input.rs
