[package]
name = "nia-navidrome"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
keyring = { workspace = true, features = ["linux-native-sync-persistent", "tokio", "crypto-rust"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
reqwest_client = { workspace = true }
gpui_http_client.workspace = true
futures.workspace = true
gpui.workspace = true
