[package]
name = "nia"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
futures-util = { workspace = true }
gpui = { workspace = true }
gpui_util = { workspace = true }
nia-navidrome = { workspace = true }
nia-ui = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "tracing"] }
reqwest_client = { workspace = true }
gpui-tokio = { workspace = true }
whoami = { workspace = true }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
libmpv = { package = "libmpv2", version = "5.0.3" }
